# rgb-camera-calibration

./: .gitignore  CMakeLists.txt  README.md  calibrate_camera.py  cam_calib.p  camera_calibration.json  camera_calibration.yml  capture_img.py  undistort_camera.py
camera_matrix/: camera_calibration_runcam.yml  camera_calibration_webcam.yml
src/: Calibrator.cpp  Calibrator.h  calibrate.cpp  main.cpp  ref_example.cpp
